--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit"
+    "source.fixAll.eslint": "explicit",
+    "source.organizeImports": "always"
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-  "eslint.codeActionsOnSave.rules": null,
+  "workbench.editor.highlightModifiedTabs": true,
+  "files.trimFinalNewlines": true,
   "typescript.tsdk": "node_modules/typescript/lib"
 }
